# CHIP_8_Emulator

./: CMakeLists.txt  Chip8.cpp  Chip8.h  README.md
source/: Chip8.cpp  Chip8.h  Platform.cpp  Platform.h  main.cpp
